charge online user

--- a/src/app/components/category-banner/category-banner.component.html
+++ b/src/app/components/category-banner/category-banner.component.html
@@ -3,15 +3,17 @@
     <div class="row">
       <div class="col-lg-6 col-md-6">
         <img
-          src="https://htmldemo.net/ruiz/ruiz/assets/images/banner/banner-01.jpg"
+          (click)="router.navigate(['/product/00lubdi6vafeb22xn8hj']).then()"
+          src="/assets/images/banners/lg-luxury.webp"
           alt=""
-          class="w-100 object-fit-cover" />
+          class="w-100 object-fit-cover cursor-pointer" />
       </div>
       <div class="col-lg-6 col-md-6">
         <img
-          src="https://htmldemo.net/ruiz/ruiz/assets/images/banner/banner-02.jpg"
+          (click)="router.navigate(['/product/00lubdjknzlxelzqll32']).then()"
+          src="/assets/images/banners/fc-luxury-banner.webp"
           alt=""
-          class="w-100 object-fit-cover" />
+          class="w-100 object-fit-cover cursor-pointer" />
       </div>
     </div>
   </div>
