--- a/src/app/components/season-collection-banner/season-collection-banner.component.html
+++ b/src/app/components/season-collection-banner/season-collection-banner.component.html
@@ -6,20 +6,19 @@
       </div>
       <div class="col-lg-6">
         <div class="banner-content-wrapper">
-          <h2 class="fw-normal text-size-6xl">
-            Bộ Sưu Tập Đông 2023
-          </h2>
+          <h2 class="fw-normal text-size-6xl">Bộ Sưu Tập Đông 2023</h2>
           <div class="content text-size-medium">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-            ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
-            accumsan lacus vel facilisis.
+            Thu đông chính là dịp để những xu hướng thời trang mới nhất lên
+            ngôi, những tín đồ của giới thời trang mộ điệu luôn bắt nhịp để hoàn
+            thiện outfit sành điệu và thời thượng nhất của mình. Watch Store cập
+            nhật bộ sưu tập với những mẫu đồng hồ mới, những items với tone màu
+            và điểm nhấn thật trendy và nổi bật.
           </div>
           <div class="banner-btn">
             <a
-              href=""
-              class="text-uppercase fw-500 color-white d-inline-block rounded-0"
-              >Shop The Look</a
+              (click)="router.navigate(['/collections']).then()"
+              class="text-uppercase fw-500 color-white cursor-pointer d-inline-block rounded-0"
+              >Mua sắm ngay</a
             >
           </div>
         </div>
