--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -33,7 +33,7 @@
         <div class="col-lg-3 col-sm-8">
           <div class="d-flex justify-content-end">
             <ng-container *ngIf="userInfo$ | async">
-              <div
+              <!-- <div
                 class="wishlist-wrapper pe-2 me-3 position-relative"
                 (click)="router.navigate(['/favorite']).then()">
                 <a class="cursor-pointer">
@@ -43,6 +43,29 @@
                     2
                   </span>
                 </a>
+              </div> -->
+              <div class="notification pe-2 me-3 position-relative">
+                <a class="cursor-pointer">
+                  <span class="material-symbols-outlined"> notifications </span>
+                </a>
+                <div class="content position-absolute bg-white end-0">
+                  <h6>Thông báo</h6>
+                  <div class="notification-wrapper">
+                    <a
+                      (click)="redirectOrderHistory(notification.linkTo)"
+                      class="notification-link"
+                      *ngFor="let notification of notifications">
+                      <div class="notification-item">
+                        <div class="notification-content mb-2">
+                          {{ notification.content }}
+                        </div>
+                        <div class="notification-time">
+                          {{ notification.createdAt | timeAgo }}
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
               </div>
               <div class="cart-wrapper pe-2 me-3 position-relative">
                 <a
