--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -224,3 +224,71 @@
   background: #e5e5e5;
   transform: translateY(3px);
 }
+
+.notification:hover .content {
+  visibility: visible;
+  opacity: 1;
+}
+
+.content {
+  max-width: 500px;
+  min-width: 350px;
+  width: fit-content;
+  overflow: hidden;
+  padding: 10px 15px;
+  box-sizing: border-box;
+  border-radius: 2px;
+  background-color: white;
+  z-index: 3;
+  transition: all 0.3s ease-in-out;
+  visibility: hidden;
+  opacity: 0;
+
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: rgb(209, 204, 204);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  h6 {
+    margin: 5px 0px 10px;
+  }
+
+  .notification-wrapper {
+    height: 100%;
+    width: 100%;
+    max-height: 430px;
+    padding-right: 5px;
+    overflow-y: auto;
+  }
+
+  .notification-link {
+    text-decoration: none;
+    color: black;
+    margin: 10px auto;
+    display: block;
+  }
+
+  .notification-item {
+    position: relative;
+    border-radius: 2px;
+    padding: 10px 15px;
+    box-sizing: border-box;
+    transition: all 0.2s;
+
+    &:hover {
+      background-color: #f5f5f5;
+    }
+  }
+
+  .notification-time {
+    font-size: smaller;
+    color: #828282;
+  }
+}
