--- a/src/app/pages/order-return/order-return.component.html
+++ b/src/app/pages/order-return/order-return.component.html
@@ -1,15 +1,29 @@
 <div class="container text-center pt-60 pb-60">
   <img
-    src="/assets/images/icons/success-icon.png"
+    [src]="
+      params.vnp_ResponseCode === '00'
+        ? '/assets/images/icons/success-icon.png'
+        : '/assets/images/icons/error-icon.png'
+    "
     alt=""
     class="mb-3"
     style="max-width: 60px" />
-  <h2 class="mb-2">Thanh Toán</h2>
-  <p class="text-muted">
-    Bạn đã thanh toán thành công với số tiền thanh toán
-    {{ params.vnp_Amount / 100 | formatPrice }}
-  </p>
-  <p class="text-muted">
-    Giao dịch được thực hiện thành công. Cảm ơn quý khách đã sử dụng dịch vụ
-  </p>
+
+  <ng-container *ngIf="params.vnp_ResponseCode === '00'; else failure">
+    <h2 class="mb-2 text-success">Thanh Toán Thành Công</h2>
+    <p class="text-muted">
+      Dơn hàng của quý khách đã thanh toán thành công với số tiền.
+      {{ params.vnp_Amount / 100 | formatPrice }}
+    </p>
+
+    <p class="text-muted">
+      Chúng tôi sẽ sớm liên hệ với quý khách để bàn giao sản phẩm. Cảm ơn quý
+      khách đã sử dụng dịch vụ
+    </p>
+  </ng-container>
+  <ng-template #failure>
+    <h2 class="mb-2 text-danger">Thanh Toán Thất Bại</h2>
+    <p class="text-muted">Đơn hàng của quý khách chưa được thanh toán</p>
+    <p>Giao dịch thực hiện thất bại</p>
+  </ng-template>
 </div>
