--- a/src/app/components/authentication-modal/authentication-modal.component.html
+++ b/src/app/components/authentication-modal/authentication-modal.component.html
@@ -20,7 +20,7 @@
           <div class="modal-body border-bottom">
             <div class="row">
               <div class="form-group pb-4 col-12" required>
-                <label class="form-label">Email*</label>
+                <label class="form-label">Email</label>
                 <input
                   required
                   formControlName="email"
