--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -31,7 +31,7 @@
     <div class="price-box text-size-medium">
       <span class="new-price fw-600">{{
         minPriceOfProduct?.price | formatPrice
-      }}</span>
+      }}đ</span>
       <!-- <span class="old-price">{{ productItem?.oldPrice }}</span> -->
     </div>
   </div>
