--- a/src/app/components/quick-view-product-modal/quick-view-product-modal.component.html
+++ b/src/app/components/quick-view-product-modal/quick-view-product-modal.component.html
@@ -71,11 +71,7 @@
                 class="price-box primary-color fw-500 mb-3 mt-2 w-100 text-size-large">
                 <span class="new-price fw-500 primary-color">{{
                   selectedPrice?.price | formatPrice
-                }}</span>
-                <!-- <span
-                  class="old-price d-inline-block font-weight-normal ms-1 text-decoration-line-through"
-                  >$78.00</span
-                > -->
+                }}đ</span>
               </div>
               <div class="select-size-box mb-3">
                 <h6 class="mb-2">Chọn size</h6>
