--- a/src/app/pages/checkout/checkout.component.scss
+++ b/src/app/pages/checkout/checkout.component.scss
@@ -181,3 +181,12 @@ h5 {
   border: 1px solid #e0e0e0;
   border-radius: 4px;
 }
+
+.coupon-item {
+  padding: 10px;
+  cursor: pointer;
+
+  &:hover {
+    color: $primary-color;
+  }
+}
