--- a/src/app/pages/order-return/order-return.component.html
+++ b/src/app/pages/order-return/order-return.component.html
@@ -13,7 +13,7 @@
     <h2 class="mb-2 text-success">Thanh Toán Thành Công</h2>
     <p class="text-muted">
       Dơn hàng của quý khách đã thanh toán thành công với số tiền.
-      {{ params.vnp_Amount / 100 | formatPrice }}
+      {{ params.vnp_Amount / 100 | formatPrice }}đ
     </p>
 
     <p class="text-muted">
