--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -44,28 +44,45 @@
                   </span>
                 </a>
               </div> -->
-              <div class="notification pe-2 me-3 position-relative">
+              <div
+                class="notification pe-2 me-3 position-relative"
+                (click)="onShowNotification($event)">
                 <a class="cursor-pointer">
                   <span class="material-symbols-outlined"> notifications </span>
+                  <span
+                    class="total fw-500 rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize"
+                    >{{ unseenIds.length }}
+                  </span>
                 </a>
-                <div class="content position-absolute bg-white end-0">
-                  <h6>Thông báo</h6>
-                  <div class="notification-wrapper">
-                    <a
-                      (click)="redirectOrderHistory(notification.linkTo)"
-                      class="notification-link"
-                      *ngFor="let notification of notifications">
-                      <div class="notification-item">
-                        <div class="notification-content mb-2">
-                          {{ notification.content }}
+                <ng-container *ngIf="notifications$ | async as notifications">
+                  <div
+                    class="content position-absolute bg-white end-0"
+                    *ngIf="showNotification">
+                    <h6>Thông báo</h6>
+                    <div class="notification-wrapper">
+                      <a
+                        (click)="redirectOrderHistory(notification.linkTo)"
+                        class="notification-link"
+                        *ngFor="let notification of notifications">
+                        <div class="notification-item">
+                          <div class="d-flex justify-content-between">
+                            <div style="width: 90%">
+                              <div class="notification-content mb-2">
+                                {{ notification.content }}
+                              </div>
+                              <div class="notification-time">
+                                {{ notification.createdAt | timeAgo }}
+                              </div>
+                            </div>
+                            <div
+                              class="notification-not-seen"
+                              *ngIf="notification.seen === 0"></div>
+                          </div>
                         </div>
-                        <div class="notification-time">
-                          {{ notification.createdAt | timeAgo }}
-                        </div>
-                      </div>
-                    </a>
+                      </a>
+                    </div>
                   </div>
-                </div>
+                </ng-container>
               </div>
               <div class="cart-wrapper pe-2 me-3 position-relative">
                 <a
@@ -75,7 +92,7 @@
                   <span class="material-symbols-outlined"> shopping_cart </span>
                   <span
                     *ngIf="productList$ | async as productList"
-                    class="card-total fw-500 rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize"
+                    class="total fw-500 rounded-circle bg-primary-color color-white float-left text-size-xx-small position-absolute text-center text-capitalize"
                     >{{ productList.length }}
                   </span>
                 </a>
@@ -110,7 +127,7 @@
                             <div class="price-box fw-500 color-brown">
                               <span class="new-price">{{
                                 product?.price | formatPrice
-                              }}</span>
+                              }}đ</span>
                             </div>
                           </div>
                           <div
@@ -136,7 +153,7 @@
                     <div
                       class="subtotal-title d-flex justify-content-between color-brown text-size-small fw-600">
                       <h3 class="text-size-small fw-600 m-0 color-brown">
-                        Tổng tiền : {{ total | formatPrice }}
+                        Tổng tiền : {{ total | formatPrice }}đ
                       </h3>
                       <span></span>
                     </div>
