--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -27,7 +27,7 @@
       border-radius: 0 4px 4px 0;
     }
 
-    .card-total {
+    .total {
       height: 20px;
       line-height: 22px;
       width: 20px;
@@ -225,11 +225,6 @@
   transform: translateY(3px);
 }
 
-.notification:hover .content {
-  visibility: visible;
-  opacity: 1;
-}
-
 .content {
   max-width: 500px;
   min-width: 350px;
@@ -240,9 +235,6 @@
   border-radius: 2px;
   background-color: white;
   z-index: 3;
-  transition: all 0.3s ease-in-out;
-  visibility: hidden;
-  opacity: 0;
 
   ::-webkit-scrollbar {
     width: 5px;
@@ -290,5 +282,14 @@
   .notification-time {
     font-size: smaller;
     color: #828282;
+  }
+
+  .notification-not-seen {
+    height: 8px;
+    width: 8px;
+    border: 1px solid #38b45a;
+    background-color: #38b45a;
+    border-radius: 25px;
+    margin-top: 8px;
   }
 }
