--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -6,19 +6,18 @@
           <div class="aritcles-content mb-30 pt-3">
             <div
               class="author-name fw-500 d-block text-size-x-small text-capitalize">
-              post by: <a href="#"> {{ blog.authorName }}</a> -
+              post by: <a> {{ blog.authorName }}</a> -
               {{ blog.postedAt }}
             </div>
             <h4>
               <a
-                href=""
                 class="articles-name fw-600 d-block text-size-small mb-3 mt-0 position-relative text-uppercase"
                 >{{ blog.articlesName }}</a
               >
             </h4>
           </div>
           <div class="articles-image overflow-hidden position-relative">
-            <a href="">
+            <a>
               <img [src]="blog.articlesImage" alt="" />
             </a>
           </div>
