--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -29,10 +29,9 @@
       <a>{{ productItem.name }}</a>
     </h4>
     <div class="price-box text-size-medium">
-      <span class="new-price fw-600">{{
-        minPriceOfProduct?.price | formatPrice
-      }}đ</span>
-      <!-- <span class="old-price">{{ productItem?.oldPrice }}</span> -->
+      <span class="new-price fw-600"
+        >{{ minPriceOfProduct?.price | formatPrice }}đ</span
+      >
     </div>
   </div>
 </div>
