--- a/src/app/components/swiper-product/swiper-product.component.html
+++ b/src/app/components/swiper-product/swiper-product.component.html
@@ -1,6 +1,6 @@
 <div class="swiper-product-container">
   <swiper
-    [slidesPerView]="slidesPerView"
+    [config]="swiperConfig"
     [centeredSlides]="false"
     [spaceBetween]="16"
     [pagination]="false"
