--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -231,7 +231,7 @@
           </div>
         </div>
         <div class="row product">
-          <app-swiper-product></app-swiper-product>
+          <!-- <app-swiper-product></app-swiper-product> -->
         </div>
       </div>
     </div>
@@ -245,7 +245,7 @@
         </div>
       </div>
       <div class="row product">
-        <app-swiper-product></app-swiper-product>
+        <!-- <app-swiper-product></app-swiper-product> -->
       </div>
     </div>
   </div>
