--- a/src/app/components/header-swiper-slide/header-swiper-slide.component.scss
+++ b/src/app/components/header-swiper-slide/header-swiper-slide.component.scss
@@ -2,7 +2,7 @@
 @import "color";
 
 .header-image-wrapper {
-  height: 500px;
+  min-height: 500px;
 }
 
 .bg-swiper {
@@ -35,4 +35,10 @@
   transition: all 0.3s ease 0s;
   border-color: $white;
   color: $white;
+}
+
+@media screen and (max-width: 992px) {
+  .header-image-wrapper {
+    min-height: 300px;
+  }
 }
