--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="header-top py-3">
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-3 col-sm-4">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-3">
           <div
             class="logo-area cursor-pointer"
             (click)="router.navigate(['/']).then()">
@@ -13,7 +13,12 @@
           </div>
         </div>
 
-        <div class="col-lg-6 d-lg-block d-sm-none">
+        <div
+          class="mobile-menu-icon d-flex align-items-center justify-content-end d-lg-none col-2">
+          <span class="material-symbols-outlined"> menu </span>
+        </div>
+
+        <div class="col-lg-6 d-none d-lg-block">
           <div class="search-box-wrapper position-relative d-flex">
             <input
               type="text"
@@ -30,7 +35,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-8">
+        <div class="col-lg-3 col-sm-8 d-none d-lg-block">
           <div class="d-flex justify-content-end">
             <ng-container *ngIf="userInfo$ | async">
               <!-- <div
@@ -125,9 +130,9 @@
                               >{{ product?.quality }} ×</span
                             >
                             <div class="price-box fw-500 color-brown">
-                              <span class="new-price">{{
-                                product?.price | formatPrice
-                              }}đ</span>
+                              <span class="new-price"
+                                >{{ product?.price | formatPrice }}đ</span
+                              >
                             </div>
                           </div>
                           <div
