--- a/src/app/components/product-item/product-item.component.scss
+++ b/src/app/components/product-item/product-item.component.scss
@@ -75,11 +75,11 @@
     .new-price {
       color: $primary-color;
     }
+  }
+}
 
-    .old-price {
-      text-decoration: line-through;
-      color: #555;
-      padding-left: 5px;
-    }
+@media screen and (max-width: 499px) {
+  .product-name {
+    min-height: 34px !important;
   }
 }
